tests/good/variables.siv
require "variables";

set "foo" "bar";
set :length :lower "foo_len" "${foo}";

if string :matches ["${foo_len}"] "3" {
  keep;
}