tests/bad/relational_count_no_comparator.siv
require ["relational","variables"];

if string :count "eq" "..." "1" {
    set "ok" "1";
}
